--- a/example/example-dev.html
+++ b/example/example-dev.html
@@ -88,65 +88,51 @@
         embed: {
           class: Embed,
           inlineToolbar: true,
-          tunes: ['alignmentSetting'],
+          tunes: ['blockTypeTunes'],
         },
         quote: {
           class: Quote,
           inlineToolbar: true,
-          tunes: ['alignmentSetting'],
+          tunes: ['blockTypeTunes'],
         },
         table: {
           class: Table,
           inlineToolbar: true,
-          tunes: ['alignmentSetting'],
+          tunes: ['blockTypeTunes'],
         },
         code: {
           class: CodeTool,
           inlineToolbar: true,
-          tunes: ['alignmentSetting'],
+          tunes: ['blockTypeTunes'],
         },
         raw: {
           class: RawTool,
           inlineToolbar: true,
-          tunes: ['alignmentSetting'],
+          tunes: ['blockTypeTunes'],
         },
         checklist: {
           class: Checklist,
           inlineToolbar: true,
-          tunes: ['alignmentSetting'],
+          tunes: ['blockTypeTunes'],
         },
         list: {
           class: List,
           inlineToolbar: true,
-          tunes: ['alignmentSetting'],
+          tunes: ['blockTypeTunes'],
         },
         header: {
           class: Header,
-          tunes: ['alignmentSetting'],
+          tunes: ['blockTypeTunes'],
         },
         delimiter: Delimiter,
-        paragraph: {
-          class: Paragraph,
-          inlineToolbar: false,
-          tunes: ['alignmentSetting'],
-          config:{
-            css:{
-              "btnColor": "btn--gray",
-            }
-          }
-        },
-        alignmentSetting: {
-          class:AlignmentBlockTune,
-          config:{
-            default: "center",
-            blocks: {
-              header: 'center',
-              list: 'right'
-            }
-          },
-        }
+        // paragraph: {
+        //   class: Paragraph,
+        //   inlineToolbar: true,
+        //   tunes: ['blockTypeTunes'],
+        // },
+        blockTypeTunes: BlockTypeTunes.default,
       },
-      // tunes: ['alignmentBlockTune'],
+      tunes: ['blockTypeTunes'],
       /**
        * Previously saved data that should be rendered
        */
@@ -156,7 +142,7 @@
 
       //標準で何も設定していない
       //data:{ "time" : 1617693971188, "blocks" : [ { "type" : "paragraph", "data" : { "text" : "center" }, "tunes" : { "hehe" : { "alignment" : "center" } } }, { "type" : "paragraph", "data" : { "text" : "riiiiiiiiiight" } }, { "type" : "paragraph", "data" : { "text" : "hellooooooooooooooooo" } }, { "type" : "header", "data" : { "text" : "header", "level" : 2 } }, { "type" : "quote", "data" : { "text" : "quote text", "caption" : "caption", "alignment" : "left" } }, { "type" : "table", "data" : { "content" : [ [ "aaaaaaaa", "bbbbbbbbbb", "cccccccc" ], [ "111111111", "2222222222", "ccccccccc" ] ] } }, { "type" : "code", "data" : { "code" : "paragraph: {\n          class: Paragraph,\n          inlineToolbar: false,\n          tunes: ['alignmentSetting'],\n          config:{\n            css:{\n              \"btnColor\": \"btn--gray\",\n            }\n          }\n        }," } }, { "type" : "raw", "data" : { "html" : "paragraph: {\n          class: Paragraph,\n          inlineToolbar: false,\n          tunes: ['alignmentSetting'],\n          config:{\n            css:{\n              \"btnColor\": \"btn--gray\",\n            }\n          }\n        }," } }, { "type" : "paragraph", "data" : { "text" : "paragrapg" } }, { "type" : "checklist", "data" : { "items" : [ { "text" : "check1", "checked" : false }, { "text" : "check2", "checked" : false }, { "text" : "check3", "checked" : false } ] } }, { "type" : "delimiter", "data" : {} }, { "type" : "paragraph", "data" : { "text" : "end" } } ], "version" : "2.20.0" },
-      data:{ "time" : 1617715359615, "blocks" : [ { "type" : "checklist", "data" : { "items" : [ { "text" : "check1", "checked" : false }, { "text" : "check2", "checked" : false }, { "text" : "check3", "checked" : false } ] }, "tunes" : { "alignmentSetting" : { "alignment" : "center" } } }, { "type" : "header", "data" : { "text" : "Header", "level" : 2 }, "tunes" : { "alignmentSetting" : { "alignment" : "left" } } } ], "version" : "2.20.0" },
+      //data:{ "time" : 1617715359615, "blocks" : [ { "type" : "checklist", "data" : { "items" : [ { "text" : "check1", "checked" : false }, { "text" : "check2", "checked" : false }, { "text" : "check3", "checked" : false } ] }, "tunes" : { "alignmentSetting" : { "alignment" : "center" } } }, { "type" : "header", "data" : { "text" : "Header", "level" : 2 }, "tunes" : { "alignmentSetting" : { "alignment" : "left" } } } ], "version" : "2.20.0" },
       /**
        * This Tool will be used as default
        */
